@@ -10,6 +10,7 @@
 #include "Rendering/GL/myGL.h"
 #include "Rendering/GlobalRendering.h"
 #include "Rendering/GL/RenderDataBuffer.hpp"
+#include "Rendering/GL/WideLineAdapter.hpp"
 #include "System/ContainerUtil.h"
 
 CLineDrawer lineDrawer;
@@ -38,7 +39,8 @@ void CLineDrawer::SetupLineStipple()
 
 void CLineDrawer::Restart()
 {
-	Line& line = spring::VectorEmplaceBack(lineStipple? stippleLines[useColorRestarts]: regularLines[useColorRestarts]);
+	const int idx = width * 2 + useColorRestarts;
+	Line& line = spring::VectorEmplaceBack(lineStipple? stippleLines[idx]: regularLines[idx]);
 
 	if (useColorRestarts)
 		return;
@@ -58,41 +60,55 @@ void CLineDrawer::DrawAll(bool onMiniMap)
 
 	GL::RenderDataBufferC* buffer = GL::GetRenderBufferC();
 	Shader::IProgramObject* shader = buffer->GetShader();
+	GL::WideLineAdapterC* wla = GL::GetWideLineAdapterC();
 
 	const CMatrix44f& projMat = onMiniMap? minimap->GetProjMat(0): camera->GetProjectionMatrix();
 	const CMatrix44f& viewMat = onMiniMap? minimap->GetViewMat(0): camera->GetViewMatrix();
+	const int xScale = onMiniMap? minimap->GetSizeX(): globalRendering->viewSizeX;
+	const int yScale = onMiniMap? minimap->GetSizeY(): globalRendering->viewSizeY;
+	wla->Setup(buffer, xScale, yScale, onMiniMap? 2.5f : 1.0f, projMat * viewMat, onMiniMap);
 
 	const auto DrawLines = [&](const std::vector<Line>& lines, unsigned int glType) {
+		// if (lines.empty())
+			// return;
+
 		for (const auto& line: lines) {
 			if (line.empty())
 				continue;
 
-			buffer->SafeAppend(line.data(), line.size());
+			wla->SafeAppend(line.data(), line.size());
 		}
 
-		buffer->Submit(glType);
+		wla->Submit(glType);
 	};
 
 	shader->Enable();
 	shader->SetUniformMatrix4x4<const char*, float>("u_proj_mat", false, projMat);
 	shader->SetUniformMatrix4x4<const char*, float>("u_movi_mat", false, viewMat);
 
-	{
-		DrawLines(regularLines[0], GL_LINE_LOOP);
-		DrawLines(regularLines[1], GL_LINES    );
-	}
-	{
-		// [deprecated]
-		// glAttribStatePtr->Enable(GL_LINE_STIPPLE);
-		DrawLines(stippleLines[0], GL_LINE_LOOP);
-		DrawLines(stippleLines[1], GL_LINES    );
-		// glAttribStatePtr->Disable(GL_LINE_STIPPLE);
-	}
+	DrawLines(regularLines[0], GL_LINE_LOOP);
+	DrawLines(regularLines[1], GL_LINES    );
+	// [deprecated]
+	// glAttribStatePtr->Enable(GL_LINE_STIPPLE);
+	DrawLines(stippleLines[0], GL_LINE_LOOP);
+	DrawLines(stippleLines[1], GL_LINES    );
+	// glAttribStatePtr->Disable(GL_LINE_STIPPLE);
+
+	if (!onMiniMap)
+		wla->SetWidth(cmdColors.QueuedLineWidth());
+
+	DrawLines(regularLines[2], GL_LINE_LOOP);
+	DrawLines(regularLines[3], GL_LINES    );
+	// [deprecated]
+	// glAttribStatePtr->Enable(GL_LINE_STIPPLE);
+	DrawLines(stippleLines[2], GL_LINE_LOOP);
+	DrawLines(stippleLines[3], GL_LINES    );
+	// glAttribStatePtr->Disable(GL_LINE_STIPPLE);
 
 	shader->Disable();
 	glAttribStatePtr->PopBits();
 
-	for (int i = 0; i < 2; i++) {
+	for (int i = 0; i < regularLines.size(); i++) {
 		regularLines[i].clear();
 		stippleLines[i].clear();
 	}
